menu-items gap modified. register blade scss modified. reservation bug solving in progress

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -76,7 +76,7 @@
 }
 
 .menu-items {
-    gap: 55px;
+    gap: 50px;
     font-family: $main-font;
     font-weight: 700;
     text-transform: uppercase;
@@ -354,6 +354,20 @@
     width: 80px;
 }
 
+.register-2 {
+    font-family: 'Inter', sans-serif !important;
+    font-weight: bold !important;
+    font-size: 12px !important ;
+    text-transform: none !important;
+    text-align: center;
+    margin-left: 20px; 
+    background-color: black;
+    color: white;
+    padding: 8px;
+    border-radius: 6.45px;
+    width: 80px;
+}
+
 .forgot {
     font-family: 'Inter', sans-serif !important;
     font-weight: bold !important;
@@ -393,9 +407,9 @@
 
 .custom-2 {
     font-family: $main-font !important; 
-    color: $bg-dropdown !important;
+    color: black !important;
     font-size: 12px !important;
-    font-weight: 600 !important;
+    font-weight: 400 !important;
     border: 2px solid $bg-dropdown !important; 
 }
 
